deploy/api/localdev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-go-std-sqlc-postgres-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: IfNotPresent
          image: realworld-go-std-sqlc-postgres-api:latest
      nodeSelector:
      volumes:
      serviceAccountName:
