deploy/api/localdev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: realworld-go-std-sqlc-postgres-api
spec:
  selector:
    app.kubernetes.io/name: realworld-go-std-sqlc-postgres-api
    app.kubernetes.io/instance: api
  ports:
    - name: app
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: grpc
      port: 90
      targetPort: 9000
